RESOLVED FIXED 125360
FTL shouldn't have a doubleToUInt32 path
https://bugs.webkit.org/show_bug.cgi?id=125360
Summary FTL shouldn't have a doubleToUInt32 path
Filip Pizlo
Reported 2013-12-06 12:23:35 PST
Patch forthcoming.
Attachments
the patch (2.02 KB, patch)
2013-12-06 12:24 PST, Filip Pizlo
mhahnenberg: review+
Filip Pizlo
Comment 1 2013-12-06 12:24:40 PST
Created attachment 218613 [details] the patch
Mark Hahnenberg
Comment 2 2013-12-06 12:26:27 PST
Comment on attachment 218613 [details] the patch r=me
Filip Pizlo
Comment 3 2013-12-06 12:28:05 PST
Note You need to log in before you can comment on or make changes to this bug.