FTL shouldn't have a doubleToUInt32 path https://bugs.webkit.org/show_bug.cgi?id=125360

Reviewed by Mark Hahnenberg.

This code existed because I incorrectly thought it was necessary. It's now basically
dead.

* ftl/FTLLowerDFGToLLVM.cpp:
(JSC::FTL::LowerDFGToLLVM::compilePutByVal):



Canonical link: https://commits.webkit.org/143456@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@160238 268f45cc-cd09-0410-ab3c-d52691b4dbfc